--- a/Sudoku/Symmetries/Graph/Order2/Order2.dproj
+++ b/Sudoku/Symmetries/Graph/Order2/Order2.dproj
@@ -117,6 +117,7 @@
         <DCCReference Include="..\..\..\..\Common\DLList\DLList.pas"/>
         <DCCReference Include="..\..\..\..\Common\ExactCover\ExactCover.pas"/>
         <DCCReference Include="..\..\..\..\Common\SparseMatrix\SparseMatrix.pas"/>
+        <DCCReference Include="..\..\CellCount\CellCountSymmetries.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
