--- a/Sudoku/Symmetries/Naive/Order2/Order2.dproj
+++ b/Sudoku/Symmetries/Naive/Order2/Order2.dproj
@@ -115,6 +115,7 @@
         <DCCReference Include="..\..\..\..\Common\ExactCover\ExactCover.pas"/>
         <DCCReference Include="..\..\..\..\Common\SparseMatrix\SparseMatrix.pas"/>
         <DCCReference Include="..\..\CellCount\CellCountSymmetries.pas"/>
+        <DCCReference Include="..\..\Graph\GraphSymmetries.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
