--- a/Sudoku/Symmetries/Naive/Order3/Order3.dproj
+++ b/Sudoku/Symmetries/Naive/Order3/Order3.dproj
@@ -112,6 +112,8 @@
         <DCCReference Include="..\..\..\..\Common\DLList\DLList.pas"/>
         <DCCReference Include="..\..\..\..\Common\ExactCover\ExactCover.pas"/>
         <DCCReference Include="..\..\..\..\Common\SparseMatrix\SparseMatrix.pas"/>
+        <DCCReference Include="..\..\CellCount\CellCountSymmetries.pas"/>
+        <DCCReference Include="..\..\Graph\GraphSymmetries.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
